<project 
	xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>software.uncharted.influent</groupId>
		<artifactId>influent</artifactId>
		<version>2.0.0</version>
	</parent>

	<artifactId>influent-server</artifactId>
	<packaging>jar</packaging>

	<name>influent-server</name>
	<description>This project contains the Influent web server.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- Implied environment=development if environment property not set -->
	</properties>

	<dependencies>
		<dependency>
			<groupId>software.uncharted.influent</groupId>
			<artifactId>aperture-spi</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>software.uncharted.influent</groupId>
			<artifactId>aperture-server-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>software.uncharted.influent</groupId>
			<artifactId>aperture-icons</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>software.uncharted.influent</groupId>
			<artifactId>aperture-parchment</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>software.uncharted.influent</groupId>
			<artifactId>aperture-cms</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>software.uncharted.influent</groupId>
			<artifactId>aperture-capture-phantom</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
		  <artifactId>influent-spi</artifactId>
			<groupId>${project.parent.groupId}</groupId>
			<version>${project.parent.version}</version>
		</dependency>
		
		<dependency>
			<groupId>software.uncharted.influent</groupId>
			<artifactId>ensemble-clustering</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>
				
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.14.0</version>
		</dependency>

		<dependency>
			<groupId>net.sourceforge.jtds</groupId>
			<artifactId>jtds</artifactId>
			<version>1.3.1</version>
		</dependency>
		
		<dependency>
			<groupId>com.jolbox</groupId>
			<artifactId>bonecp</artifactId>
			<version>0.8.0.RELEASE</version>
		</dependency>
            
		<dependency>
			<groupId>com.sun.jersey.contribs</groupId>
			<artifactId>jersey-apache-client</artifactId>
			<version>1.19.4</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-core</artifactId>
			<version>2.0.6</version>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>org.eclipse.persistence.moxy</artifactId>
			<version>4.0.8</version>
		</dependency>		
		
		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-web</artifactId>
			<version>2.0.6</version>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-guice</artifactId>
			<version>2.0.6</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.restlet</groupId>
			<artifactId>org.restlet.ext.fileupload</artifactId>
			<version>2.5.2</version>
		</dependency>

 		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.21.0</version>
		</dependency>

		<dependency>
			<artifactId>solr-solrj</artifactId>
			<groupId>org.apache.solr</groupId>
			<version>9.10.0</version>
		</dependency>

		<!-- JAXB dependencies for Java 17 compatibility -->
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.4</version>
		</dependency>
		
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.6</version>
		</dependency>
		
		<!-- Commons Lang for String utilities -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.20.0</version>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>google-api-services</id>
			<url>https://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<!-- Continuous Integration Management -->
	<ciManagement>
		<system>hudson</system>
		<url>http://maven/jenkins/</url>
	</ciManagement>

	<build>		
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>influent/server/influent.version</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>influent/server/influent.version</exclude>
				</excludes>
			</resource>			
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>default-clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- | Create a "Build Number" that contains the time of the build (available
				as ${buildNumber}) -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
					<format>{0,date,yyyy-MM-dd HH:mm:ss}</format>
					<items>
						<item>timestamp</item>
					</items>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<testFailureIgnore>false</testFailureIgnore>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- BUILD DISTRIBUTION IN ZIP FORM OF ALL LIBRARIES. -->
	<!-- SOLR variation is for skinny war convenience only for solr apps (NOT REQUIRED) -->
	<profiles>
		<profile>
			<id>nosolr</id>
		    <activation>
		      <activeByDefault>true</activeByDefault>
		    </activation>			
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.8.0</version>
						<executions>
							<execution>
								<id>compile-dist</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<descriptors>
										<descriptor>src/main/assembly/distribution.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<profile>
			<id>solr</id>
			<activation>
				<property>
					<name>influent.server.dist</name>
					<value>solr</value>
				</property>
			</activation>
		    <dependencies>
				<dependency>
					<artifactId>solr-solrj</artifactId>
					<groupId>org.apache.solr</groupId>
					<version>9.10.0</version>
				</dependency>
		    </dependencies>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.8.0</version>
						<executions>
							<execution>
								<id>compile-dist</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<descriptors>
										<descriptor>src/main/assembly/distribution-solr.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
